# vifirmware

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: gcc-arm-none-eabi.cmake
main/: main.c
